[gd_scene format=3 uid="uid://cmwuriswo1rie"]

[ext_resource type="Script" uid="uid://c7qpsgro8ff7t" path="res://player_spawner.gd" id="1_6k3qi"]
[ext_resource type="PackedScene" uid="uid://dy8v7muxnc5sa" path="res://unit.tscn" id="2_0qle8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7dm0k"]
size = Vector2(320, 20)

[node name="PlayerSpawner" type="Area2D" unique_id=29089795]
script = ExtResource("1_6k3qi")
unit_scene = ExtResource("2_0qle8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=314223263]
shape = SubResource("RectangleShape2D_7dm0k")

[node name="Lane1" type="Marker2D" parent="." unique_id=319937776]
position = Vector2(-136, -1)

[node name="Lane2" type="Marker2D" parent="." unique_id=752831547]
position = Vector2(-79, 0)

[node name="Lane3" type="Marker2D" parent="." unique_id=1457174111]
position = Vector2(-1, -1)

[node name="Lane4" type="Marker2D" parent="." unique_id=326321650]
position = Vector2(79, 0)

[node name="Lane5" type="Marker2D" parent="." unique_id=148018225]
position = Vector2(144, -2)
